working on assets and allocations
